<resources>
    <string name="app_name">Fight Cave Rotations</string>
    <string name="action_reset">Reset</string>
    <string name="action_howto">How to use</string>
    <string name="ready">I\'m ready!</string>
    <string name="firstSpawn">Wave 1 spawn location:</string>
    <string name="secondSpawn">Wave 2 spawn locations:</string>
    <string name="current_wave">Current wave: </string>
    <string name="nw">NW</string>
    <string name="center">Center</string>
    <string name="grid">Grid representing fightcaves</string>
    <string name="se">SE</string>
    <string name="south">South</string>
    <string name="sw">SW</string>
    <string name="next_wave">Next wave</string>
    <string name="error_unknown">You broke the app ;(</string>
    <string name="error_checked_zero">You didn\'t select anything.</string>
    <string name="error_wrong_selection">Impossible selection.</string>
    <string name="error_checked_two">There is only 1 spawn this wave.</string>
    <string name="prev_wave">Back</string>
    <string name="compass">compass</string>
    <string name="wave_4">Wave 4 spawn locations:</string>
    <string name="how_to_use">How to use:</string>
    <string name="howto1">- Select the location of the 1st and 2nd wave spawns. If required, also select the locations on wave 4.</string>
    <string name="howto2">- Click the \"Next wave\" and \"Back\" buttons to navigate through the waves.</string>
</resources>
