<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.walid.fightcaverotations.SetupActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/firstSpawn"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.304"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkNW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nw"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageGrid"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageGrid"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintTop_toTopOf="@+id/imageGrid"
        android:layout_marginTop="36dp" />

    <CheckBox
        android:id="@+id/checkCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/center"
        app:layout_constraintBottom_toBottomOf="@+id/imageGrid"
        app:layout_constraintLeft_toLeftOf="@+id/imageGrid"
        app:layout_constraintRight_toRightOf="@+id/imageGrid"
        app:layout_constraintTop_toTopOf="@+id/imageGrid" />

    <CheckBox
        android:id="@+id/checkSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sw"
        app:layout_constraintBottom_toBottomOf="@+id/imageGrid"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="@+id/imageGrid"
        app:layout_constraintRight_toRightOf="@+id/imageGrid"
        app:layout_constraintTop_toBottomOf="@+id/checkNW"
        app:layout_constraintVertical_bias="0.856" />

    <CheckBox
        android:id="@+id/checkSouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/south"
        app:layout_constraintBottom_toBottomOf="@+id/imageGrid"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintLeft_toRightOf="@+id/checkSW"
        app:layout_constraintRight_toRightOf="@+id/imageGrid"
        app:layout_constraintTop_toBottomOf="@+id/checkCenter"
        app:layout_constraintVertical_bias="0.686" />

    <CheckBox
        android:id="@+id/checkSE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/se"
        app:layout_constraintBottom_toBottomOf="@+id/imageGrid"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintLeft_toRightOf="@+id/checkSouth"
        app:layout_constraintRight_toRightOf="@+id/imageGrid"
        app:layout_constraintTop_toTopOf="@+id/imageGrid"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/buttonNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/next_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGrid" />

</android.support.constraint.ConstraintLayout>
